--- a/css/projet.css
+++ b/css/projet.css
@@ -1,48 +1,49 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
-form{
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 40px;
-    background: white;
-    width: 300px;
-    text-align: center;
-    background: rgba(255, 255, 255, 0.2);
+form {
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 40px;
+  background: white;
+  width: 300px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.2);
 }
 
-fieldset{
-    border: none;
-    padding: 0;
-    margin: 0;
+fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
 }
 
-button{
-    padding: 10px;
-    width: 100px;
-    border-radius: 10px;
-    border: 2px white;
-    background-color: blue;
-    color: white;
+button {
+  padding: 10px;
+  width: 100px;
+  border-radius: 10px;
+  border: 2px white;
+  background-color: blue;
+  color: white;
 }
 
-input{
-    border-radius: 5px;
-    width: 180px;
-    height: 25px;
-
+input {
+  border-radius: 5px;
+  width: 180px;
+  height: 25px;
 }
 
-body{
-    background: url("../img/Captura\ de\ tela_6-11-2025_122019_www.bing.com.jpeg") no-repeat center fixed;
-    background-size: cover;
+body {
+  background: url("../img/Captura\ de\ tela_6-11-2025_122019_www.bing.com.jpeg")
+    no-repeat center fixed;
+  background-size: cover;
 }
 
-h3, h2 {
-    color: white;
+h3,
+h2 {
+  color: white;
 }
